<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home_section1">

    <!-- Home Section Fragments -->
    <fragment
        android:id="@+id/nav_home_section1"
        android:name="com.comixa.app.ui.home.section1.HomeSection1Fragment"
        android:label="@string/menu_home_section1" />

    <fragment
        android:id="@+id/nav_home_section2"
        android:name="com.comixa.app.ui.home.section2.HomeSection2Fragment"
        android:label="@string/menu_home_section2" />

    <!-- Library Section Fragments -->
    <fragment
        android:id="@+id/nav_library_section1"
        android:name="com.comixa.app.ui.library.section1.LibrarySection1Fragment"
        android:label="@string/menu_library_section1" />

    <fragment
        android:id="@+id/nav_library_section2"
        android:name="com.comixa.app.ui.library.section2.LibrarySection2Fragment"
        android:label="@string/menu_library_section2" />

    <!-- Discover Section Fragments -->
    <fragment
        android:id="@+id/nav_discover_section1"
        android:name="com.comixa.app.ui.discover.section1.DiscoverSection1Fragment"
        android:label="@string/menu_discover_section1" />

    <fragment
        android:id="@+id/nav_discover_section2"
        android:name="com.comixa.app.ui.discover.section2.DiscoverSection2Fragment"
        android:label="@string/menu_discover_section2" />

    <!-- Community Section Fragments -->
    <fragment
        android:id="@+id/nav_community_section1"
        android:name="com.comixa.app.ui.community.section1.CommunitySection1Fragment"
        android:label="@string/menu_community_section1" />

    <fragment
        android:id="@+id/nav_community_section2"
        android:name="com.comixa.app.ui.community.section2.CommunitySection2Fragment"
        android:label="@string/menu_community_section2" />

    <!-- Profile Section Fragments -->
    <fragment
        android:id="@+id/nav_profile_section1"
        android:name="com.comixa.app.ui.profile.section1.ProfileSection1Fragment"
        android:label="@string/menu_profile_section1" />

    <fragment
        android:id="@+id/nav_profile_section2"
        android:name="com.comixa.app.ui.profile.section2.ProfileSection2Fragment"
        android:label="@string/menu_profile_section2" />

    <!-- Settings Section Fragments -->
    <fragment
        android:id="@+id/nav_settings_section1"
        android:name="com.comixa.app.ui.settings.section1.SettingsSection1Fragment"
        android:label="@string/menu_settings_section1" />

    <fragment
        android:id="@+id/nav_settings_section2"
        android:name="com.comixa.app.ui.settings.section2.SettingsSection2Fragment"
        android:label="@string/menu_settings_section2" />

    <fragment
        android:id="@+id/nav_lab1_panel"
        android:name="com.comixa.app.ui.labs.lab1.Lab1Fragment"
        android:label="@string/menu_lab1"/>

    <fragment
        android:id="@+id/nav_lab2"
        android:name="com.comixa.app.ui.labs.lab2.Lab2EntryFragment"
        android:label="@string/lab_2" />

    <fragment
        android:id="@+id/nav_lab3_sources"
        android:name="com.comixa.app.ui.labs.lab3.sources.Lab3SourcesFragment"
        android:label="RSS Sources" >
        <action
            android:id="@+id/action_lab3_sources_to_items"
            app:destination="@id/nav_lab3_items" />
    </fragment>

    <fragment
        android:id="@+id/nav_lab3_items"
        android:name="com.comixa.app.ui.labs.lab3.items.Lab3ItemsFragment"
        android:label="Articles">
        <argument
            android:name="sourceId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/nav_lab3_web"
        android:name="com.comixa.app.ui.labs.lab3.web.Lab3WebFragment"
        android:label="Browser">
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_lab4"
        android:name="com.comixa.app.ui.labs.lab4.Lab4Fragment"
        android:label="@string/menu_lab4" />

</navigation>
