<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/google_search">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rgCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/rbBack">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rear_camera" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbFront"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_camera" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNotify"
            style="@style/Widget.Material3.Button"
            android:text="@string/show_notification_in_10_seconds"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/search_in_google"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenCamera"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/camera_camerax"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenPreview"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/open_last_photo"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
